@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-26T01:08:53Z",
+  "timestamp" : "2025-03-02T01:13:07Z",
   "count_outdated" : 518,
   "uniques_outdated" : 345,
-  "count" : 521,
-  "uniques" : 348,
+  "count" : 523,
+  "uniques" : 350,
   "clones" : [
     {
       "timestamp": "2025-02-18T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
