@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2025-02-18T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2025-02-25T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-01T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
